Issue 7336: Convert obsolete 'new Double' to preferred 'Double.valueOf'